# pi-synth

./: .gitattributes  .gitignore  .gitmodules  AUDIO_UPGRADE.md  CLAUDE.md  README.md  apt-requirements.txt  config.toml  deploy-and-test.sh  deploy.sh  pyproject.toml  setup.sh
docs/: engine-architecture.md
hardware/: BOM.md
hardware/enclosure/: enclosure.f3d  enclosure.stl  enclosure43.f3d  enclosure43.stl
hardware/pcb/pi-audio-hat/: fp-lib-table  pi-audio-hat.kicad_pcb  pi-audio-hat.kicad_pro  pi-audio-hat.kicad_sch
instruments/: voices.json
os-image/: .gitignore  README.md  build.sh  config
os-image/docs/: HANDOFF.md
os-image/kernel/: README.md
os-image/stage-pi-synth/: EXPORT_IMAGE  prerun.sh
os-image/stage-pi-synth/00-base-packages/: 00-debconf  00-packages
os-image/stage-pi-synth/01-realtime-kernel/: 00-run.sh
os-image/stage-pi-synth/02-audio-stack/: 00-run-chroot.sh
scripts/: engine-manager.sh  midi-connect.sh
src/: config.py  main.py  socket_client.py  synth_client.py  ui.py
src/clients/: __init__.py  constants.py  socket_client.py  synth_client.py
src/controller/: __init__.py  backend.py  fluidsynth.py  midi_monitor.py  socket_client.py
src/synth_ui/: config.py  main.py
src/ui/: __init__.py  app.py  colors.py  component.py  header.py  layout.py  ui.py  utils.py  voice_list.py  volume_slider.py
systemd/: a2jmidid.service  cpu-performance.service  fluidsynth-engine.service  jack.service  midi-instrument-ui.service  midi-instrument.service  mod-host.service  setbfree.service  synth-ui.service
tests/: test_synth_client.py
(+51 files in other folders)
