[build-system]
requires = ["setuptools"]
build-backend = "setuptools.backends.legacy:build"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "synth"
version = "0.1.0"
description = "A dedicated MIDI instrument built on Raspberry Pi with FluidSynth"
requires-python = ">=3.11"
dependencies = [
    "pygame",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 88
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
